API REST ha d'utilitzar un nou POJO anomenat EvidenciaWS #10
