# evidenciesib-api-externa/src/main/java/es/caib/evidenciesib/api/externa/secure/evidencies/EvidenciaFile.java
@@ -1,7 +1,6 @@
 package es.caib.evidenciesib.api.externa.secure.evidencies;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
-
+import es.caib.evidenciesib.model.entity.Fitxer;
 import io.swagger.v3.oas.annotations.media.Schema;
 
 /**
@@ -9,41 +8,41 @@ import io.swagger.v3.oas.annotations.media.Schema;
  * @author anadal
  *
  */
+@Schema(description = "Objecte per enviar i rebre fitxers així com la informació associada a aquest.")
 public class EvidenciaFile {
 
-    @JsonProperty("nom")
-    private String nom = null;
+    @Schema(description = "Nom del fitxer")
+    private String name = null;
 
-    @JsonProperty("mime")
+    @Schema(description = "Tipus MIME del Fitxer")
     private String mime = null;
 
-    @JsonProperty("tamany")
-    private Long tamany = null;
+    @Schema(description = "Mida en bytes del document")
+    private long size = -1;
 
-    @JsonProperty("descripcio")
-    private String descripcio = null;
+    @Schema(description = "Descripció del Fitxer")
+    private String description = null;
 
-    @Schema(type = "string", format = "byte")
+    @Schema(
+            required = false,
+            description = "Identificar del fitxer per poder-ho recuperar en una segona fase. Només apareix en llistats per no incloure el contingut del fitxer.")
+    private String encryptedFileID;
+
+    @Schema(
+            description = "Contingut del fitxer. En llistats aquest camp vendrà buit.",
+            required = false,
+            type = "string",
+            format = "byte")
     protected byte[] document;
 
-    /**
-    * Get nom
-    * @return nom
-    **/
-    @Schema(description = "")
-    public String getNom() {
-        return nom;
+    public String getName() {
+        return name;
     }
 
-    public void setNom(String nom) {
-        this.nom = nom;
+    public void setName(String name) {
+        this.name = name;
     }
 
-    /**
-    * Get mime
-    * @return mime
-    **/
-    @Schema(description = "")
     public String getMime() {
         return mime;
     }
@@ -52,30 +51,28 @@ public class EvidenciaFile {
         this.mime = mime;
     }
 
-    /**
-    * Get tamany
-    * @return tamany
-    **/
-    @Schema(description = "")
-    public Long getTamany() {
-        return tamany;
+    public Long getSize() {
+        return size;
     }
 
-    public void setTamany(Long tamany) {
-        this.tamany = tamany;
+    public void setSize(Long size) {
+        this.size = size;
     }
 
-    /**
-    * Get descripcio
-    * @return descripcio
-    **/
-    @Schema(description = "")
-    public String getDescripcio() {
-        return descripcio;
+    public String getDescription() {
+        return description;
     }
 
-    public void setDescripcio(String descripcio) {
-        this.descripcio = descripcio;
+    public void setDescription(String description) {
+        this.description = description;
+    }
+
+    public String getEncryptedFileID() {
+        return encryptedFileID;
+    }
+
+    public void setEncryptedFileID(String encryptedFileID) {
+        this.encryptedFileID = encryptedFileID;
     }
 
     public byte[] getDocument() {
@@ -84,6 +81,20 @@ public class EvidenciaFile {
 
     public void setDocument(byte[] document) {
         this.document = document;
+    }
+
+    public static EvidenciaFile toBean(Fitxer __bean) {
+        if (__bean == null) {
+            return null;
+        }
+        EvidenciaFile __tmp = new EvidenciaFile();
+        __tmp.setName(__bean.getNom());
+        __tmp.setMime(__bean.getMime());
+        __tmp.setSize(__bean.getTamany());
+        __tmp.setDescription(__bean.getDescripcio());
+        // EncryptedFileID
+        __tmp.setEncryptedFileID(__bean.getEncryptedFileID());
+        return __tmp;
     }
 
 }
