# evidenciesib-api-externa/src/main/java/es/caib/evidenciesib/api/externa/secure/evidencies/EvidenciesPaginacio.java
@@ -1,14 +1,0 @@
-package es.caib.evidenciesib.api.externa.secure.evidencies;
-
-import org.fundaciobit.pluginsib.utils.rest.RestPagination;
-
-import es.caib.evidenciesib.model.entity.Evidencia;
-
-/**
- * 
- * @author anadal
- *
- */
-public class EvidenciesPaginacio extends RestPagination<Evidencia>{
-
-}
